# myecolav

./: .gitattributes  .gitignore  CHANGELOG.md  CHANGELOG_UBUNTU20.md  CRIAR_RELEASE_GITHUB.md  IMPLEMENTACAO_COMPLETA.md  INSTALACAO_UBUNTU.md  INSTALACAO_UBUNTU_20.04.md  LOGICA_TOTEM_CENTRAL.md  NETWORK_SETUP.md  OFFLINE-FIRST-GUIDE.md  README.md  README_TOTEM_ECOLAV.md  README_UBUNTU.md  RESUMO_EXECUTIVO.md  debug-scale.cjs  fix-javascriptcore.sh  fix-repos-ubuntu.sh  index.html  install-manual.sh  install-ubuntu.sh  install-ubuntu20.sh  original_dashboard.txt  package-lock.json  package.json  rfid-config.json  scale-server.cjs  scale-server.js  server.js  start-all.sh  start-network.cjs  start-network.js  tatus --short  temp_weighing.txt  test-scale-port.sh  vite.config.ts
.github/workflows/: build-release.yml  build.yml  tauri-build.yml  ubuntu-only.yml.bak
backend/: package-lock.json  package.json
backend/prisma/: schema.prisma
backend/src/: index.ts
chainway-rfid/: package-lock.json  package.json  tsconfig.json
chainway-rfid/src/: index.ts
ecolav-instalador/: README.txt  instalar.sh  scale-server.cjs
scripts/: package-installer.mjs  package-installer.sh  prepare-backend-resources.mjs  start-backend.cmd  start-backend.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql
src-tauri/resources/: ecolav-totem.desktop
src-tauri/src/: backend.rs  commands.rs  db.rs  lib.rs
src/components/: SyncStatusIndicator.tsx
src/config/: api.ts
src/hooks/: useClients.ts  useSectors.ts  (+11 more)
(+28 files in other folders)
